[build-system]
requires = ["scikit-build-core >=0.10", "nanobind >=1.3.2"]
build-backend = "scikit_build_core.build"

[tool.cibuildwheel]
build = "cp312-*"
skip = "*-musllinux_*"
manylinux-x86_64-image = "manylinux2014"
archs = ["x86_64"]
before-build = "pip install uv"

[project]
name = "entt"
version = "0.1.1"
description = "Python bindings for EnTT - A high-performance Entity Component System library"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "ominkk" }]

[project.urls]
Homepage = "https://github.com/ominkk/PyEnTT"
Documentation = "https://github.com/ominkk/PyEnTT#readme"
Repository = "https://github.com/ominkk/PyEnTT"
Issues = "https://github.com/ominkk/PyEnTT/issues"

[dependency-groups]
dev = ["pytest"]

[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "build-system.requires"
cmake.build-type = "Release"

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"

[tool.pytest.ini_options]

[tool.pyright]
include = ["scripts", "tests"]
exclude = ["**/__pycache__"]
ignore = []
defineConstant = { DEBUG = true }
stubPath = "stubs"
venvPath = "./"
venv = ".venv"
